--- a/ios/flmf/Info.plist
+++ b/ios/flmf/Info.plist
@@ -39,7 +39,7 @@
 			<string>weixin</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wx49178e61387e2f67</string>
+				<string>wx2a5779a8fdf8ff4b</string>
 			</array>
 		</dict>
 		<dict>
