--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,7 @@
-__tests__
-.vscode
-android
-ios
-node_modules
-.babelrc
-.buckconfig
-.flowconfig
-.gitattributes
-.watchmanconfig
-app.json
-index.android.js
-index.ios.js
-jsconfig.json
-package.json
-yarn.lock
+/*
+!.gitignore
+!/app
+!/resources
 
 # OSX
 #
