--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "~15.4.0",
     "react-native": "0.41.2",
+    "react-native-code-push": "^2.0.2-beta",
     "react-native-image-picker": "^0.26.1",
     "react-native-qq": "^2.0.5",
     "react-native-scrollable-tab-view": "^0.7.2",
