--- a/ios/flmf/Info.plist
+++ b/ios/flmf/Info.plist
@@ -136,6 +136,10 @@
 		<string>Icomoon.ttf</string>
 		<string>icomoon.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
