--- a/ios/flmf/Info.plist
+++ b/ios/flmf/Info.plist
@@ -23,13 +23,21 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.fanlimofang.www</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fanlimofang</string>
+			</array>
+		</dict>
+		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
 			<string>qq</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>tencent101346676</string>
+				<string>tencent1105723862</string>
 			</array>
 		</dict>
 		<dict>
