--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-echarts": "^0.3.0",
     "react": "~15.4.0",
     "react-native": "0.41.2",
     "react-native-code-push": "^2.0.2-beta",
